; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_biwgt_4x8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264dsp_msa.c_avc_biwgt_4x8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i32, i32, i32)* @avc_biwgt_4x8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avc_biwgt_4x8_msa(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %36 = load i32, i32* %14, align 4
  %37 = add nsw i32 %36, 1
  %38 = or i32 %37, 1
  %39 = load i32, i32* %11, align 4
  %40 = shl i32 %38, %39
  store i32 %40, i32* %14, align 4
  %41 = load i32, i32* %12, align 4
  %42 = load i32, i32* %13, align 4
  %43 = add nsw i32 %41, %42
  %44 = mul nsw i32 128, %43
  %45 = load i32, i32* %14, align 4
  %46 = add nsw i32 %45, %44
  store i32 %46, i32* %14, align 4
  %47 = load i32, i32* %12, align 4
  %48 = call i32 @__msa_fill_b(i32 %47)
  store i32 %48, i32* %19, align 4
  %49 = load i32, i32* %13, align 4
  %50 = call i32 @__msa_fill_b(i32 %49)
  store i32 %50, i32* %20, align 4
  %51 = load i32, i32* %14, align 4
  %52 = call i32 @__msa_fill_h(i32 %51)
  store i32 %52, i32* %35, align 4
  %53 = load i32, i32* %11, align 4
  %54 = add nsw i32 %53, 1
  %55 = call i32 @__msa_fill_h(i32 %54)
  store i32 %55, i32* %34, align 4
  %56 = load i32, i32* %20, align 4
  %57 = load i32, i32* %19, align 4
  %58 = call i32 @__msa_ilvev_b(i32 %56, i32 %57)
  store i32 %58, i32* %21, align 4
  %59 = load i32*, i32** %8, align 8
  %60 = load i32, i32* %10, align 4
  %61 = load i32, i32* %15, align 4
  %62 = load i32, i32* %16, align 4
  %63 = load i32, i32* %17, align 4
  %64 = load i32, i32* %18, align 4
  %65 = call i32 @LW4(i32* %59, i32 %60, i32 %61, i32 %62, i32 %63, i32 %64)
  %66 = load i32, i32* %10, align 4
  %67 = mul nsw i32 4, %66
  %68 = load i32*, i32** %8, align 8
  %69 = sext i32 %67 to i64
  %70 = getelementptr inbounds i32, i32* %68, i64 %69
  store i32* %70, i32** %8, align 8
  %71 = load i32, i32* %15, align 4
  %72 = load i32, i32* %16, align 4
  %73 = load i32, i32* %17, align 4
  %74 = load i32, i32* %18, align 4
  %75 = load i32, i32* %26, align 4
  %76 = call i32 @INSERT_W4_UB(i32 %71, i32 %72, i32 %73, i32 %74, i32 %75)
  %77 = load i32*, i32** %8, align 8
  %78 = load i32, i32* %10, align 4
  %79 = load i32, i32* %15, align 4
  %80 = load i32, i32* %16, align 4
  %81 = load i32, i32* %17, align 4
  %82 = load i32, i32* %18, align 4
  %83 = call i32 @LW4(i32* %77, i32 %78, i32 %79, i32 %80, i32 %81, i32 %82)
  %84 = load i32, i32* %15, align 4
  %85 = load i32, i32* %16, align 4
  %86 = load i32, i32* %17, align 4
  %87 = load i32, i32* %18, align 4
  %88 = load i32, i32* %27, align 4
  %89 = call i32 @INSERT_W4_UB(i32 %84, i32 %85, i32 %86, i32 %87, i32 %88)
  %90 = load i32*, i32** %9, align 8
  %91 = load i32, i32* %10, align 4
  %92 = load i32, i32* %15, align 4
  %93 = load i32, i32* %16, align 4
  %94 = load i32, i32* %17, align 4
  %95 = load i32, i32* %18, align 4
  %96 = call i32 @LW4(i32* %90, i32 %91, i32 %92, i32 %93, i32 %94, i32 %95)
  %97 = load i32, i32* %15, align 4
  %98 = load i32, i32* %16, align 4
  %99 = load i32, i32* %17, align 4
  %100 = load i32, i32* %18, align 4
  %101 = load i32, i32* %28, align 4
  %102 = call i32 @INSERT_W4_UB(i32 %97, i32 %98, i32 %99, i32 %100, i32 %101)
  %103 = load i32*, i32** %9, align 8
  %104 = load i32, i32* %10, align 4
  %105 = mul nsw i32 4, %104
  %106 = sext i32 %105 to i64
  %107 = getelementptr inbounds i32, i32* %103, i64 %106
  %108 = load i32, i32* %10, align 4
  %109 = load i32, i32* %15, align 4
  %110 = load i32, i32* %16, align 4
  %111 = load i32, i32* %17, align 4
  %112 = load i32, i32* %18, align 4
  %113 = call i32 @LW4(i32* %107, i32 %108, i32 %109, i32 %110, i32 %111, i32 %112)
  %114 = load i32, i32* %15, align 4
  %115 = load i32, i32* %16, align 4
  %116 = load i32, i32* %17, align 4
  %117 = load i32, i32* %18, align 4
  %118 = load i32, i32* %29, align 4
  %119 = call i32 @INSERT_W4_UB(i32 %114, i32 %115, i32 %116, i32 %117, i32 %118)
  %120 = load i32, i32* %26, align 4
  %121 = load i32, i32* %27, align 4
  %122 = load i32, i32* %28, align 4
  %123 = load i32, i32* %29, align 4
  %124 = call i32 @XORI_B4_128_UB(i32 %120, i32 %121, i32 %122, i32 %123)
  %125 = load i32, i32* %28, align 4
  %126 = load i32, i32* %26, align 4
  %127 = load i32, i32* %22, align 4
  %128 = load i32, i32* %23, align 4
  %129 = call i32 @ILVRL_B2_SB(i32 %125, i32 %126, i32 %127, i32 %128)
  %130 = load i32, i32* %29, align 4
  %131 = load i32, i32* %27, align 4
  %132 = load i32, i32* %24, align 4
  %133 = load i32, i32* %25, align 4
  %134 = call i32 @ILVRL_B2_SB(i32 %130, i32 %131, i32 %132, i32 %133)
  %135 = load i32, i32* %35, align 4
  %136 = load i32, i32* %21, align 4
  %137 = load i32, i32* %22, align 4
  %138 = call i32 @__msa_dpadd_s_h(i32 %135, i32 %136, i32 %137)
  store i32 %138, i32* %30, align 4
  %139 = load i32, i32* %35, align 4
  %140 = load i32, i32* %21, align 4
  %141 = load i32, i32* %23, align 4
  %142 = call i32 @__msa_dpadd_s_h(i32 %139, i32 %140, i32 %141)
  store i32 %142, i32* %31, align 4
  %143 = load i32, i32* %35, align 4
  %144 = load i32, i32* %21, align 4
  %145 = load i32, i32* %24, align 4
  %146 = call i32 @__msa_dpadd_s_h(i32 %143, i32 %144, i32 %145)
  store i32 %146, i32* %32, align 4
  %147 = load i32, i32* %35, align 4
  %148 = load i32, i32* %21, align 4
  %149 = load i32, i32* %25, align 4
  %150 = call i32 @__msa_dpadd_s_h(i32 %147, i32 %148, i32 %149)
  store i32 %150, i32* %33, align 4
  %151 = load i32, i32* %30, align 4
  %152 = load i32, i32* %31, align 4
  %153 = load i32, i32* %32, align 4
  %154 = load i32, i32* %33, align 4
  %155 = load i32, i32* %34, align 4
  %156 = call i32 @SRA_4V(i32 %151, i32 %152, i32 %153, i32 %154, i32 %155)
  %157 = load i32, i32* %30, align 4
  %158 = load i32, i32* %31, align 4
  %159 = load i32, i32* %32, align 4
  %160 = load i32, i32* %33, align 4
  %161 = call i32 @CLIP_SH4_0_255(i32 %157, i32 %158, i32 %159, i32 %160)
  %162 = load i32, i32* %31, align 4
  %163 = load i32, i32* %30, align 4
  %164 = load i32, i32* %33, align 4
  %165 = load i32, i32* %32, align 4
  %166 = load i32, i32* %28, align 4
  %167 = load i32, i32* %29, align 4
  %168 = call i32 @PCKEV_B2_UB(i32 %162, i32 %163, i32 %164, i32 %165, i32 %166, i32 %167)
  %169 = load i32, i32* %28, align 4
  %170 = load i32, i32* %29, align 4
  %171 = load i32*, i32** %9, align 8
  %172 = load i32, i32* %10, align 4
  %173 = call i32 @ST_W8(i32 %169, i32 %170, i32 0, i32 1, i32 2, i32 3, i32 0, i32 1, i32 2, i32 3, i32* %171, i32 %172)
  ret void
}

declare dso_local i32 @__msa_fill_b(i32) #1

declare dso_local i32 @__msa_fill_h(i32) #1

declare dso_local i32 @__msa_ilvev_b(i32, i32) #1

declare dso_local i32 @LW4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @INSERT_W4_UB(i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_UB(i32, i32, i32, i32) #1

declare dso_local i32 @ILVRL_B2_SB(i32, i32, i32, i32) #1

declare dso_local i32 @__msa_dpadd_s_h(i32, i32, i32) #1

declare dso_local i32 @SRA_4V(i32, i32, i32, i32, i32) #1

declare dso_local i32 @CLIP_SH4_0_255(i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B2_UB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_W8(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
